# treadmill

./: .gitignore  .travis.yml  LICENSE.md  MANIFEST.in  Morgan.md  README.md  Vagrantfile  build_binary.sh  constraints.txt  entry_points.txt  provision.sh  pylint.rc  pylintrc  requirements.txt  requirements_pex.txt  restats  rtd-requirements.txt  scheduler.rst  setup.cfg  setup.py  test-requirements.txt  test.py  test_setup.py  tox.ini  update_s3_rpm_repo.sh  venv-requirements.txt
Treadmill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ansible/: ansible.cfg  aws.properties  aws.yml  cell.yml  controller.inventory  instance.yml  master.yml  node.yml  vpc.yml
benchmark/: restats  scheduler-bench-node-list.py  scheduler-bench-node-tree.py  scheduler-bench.py  scheduler.py
deploy/: __init__.py  ansible.cfg  api.yml  aws.yml  cell.yml  destroy-cell.yml  freeipa.yml  instance.yml  manifest.yml  master.yml  node.yml  vpc.yml
deploy/config/: aws.yml  treadmill.yml
docs/: Makefile  cli_doc_generator.py
docs/source/: ansible.rst  aws_manual.rst  cli_docs.rst  conf.py  dev.rst  getting_started.rst  index.rst  scheduler.rst  setup.rst
etc/: linux.aliases  linux.aws.aliases  linux.exe.config  linux.vagrant.aliases  treadmill.spec
etc/ldap/: schema.yml
etc/logging/: admin.conf  admin.yml  cli.conf  cli.yml  daemon.conf  daemon.yml  spawn.yml
examples/: sleep.yml
integration_tests/: init_cell_options.yml  init_vpc_options.yml  test_cell_cli.py  test_ipa.py
local/linux/: master.config.yml  node.config.yml
manifests/: app.yml
research/: Architecture.md  Research.Rmd  Research.nb.html
research/500-app-from-500-to-1000-node/: 500-app-from-500-to-1000-node.r  500-app-from-500-to-1000-node.txt
research/500-app-from-500-to-1000-node-tree/: 500-app-from-500-to-1000-node-tree.r  500-app-from-500-to-1000-node-tree.txt
research/500-node-from-500-to-1000-app/: 500-node-from-500-to-1000-app-10.txt  500-node-from-500-to-1000-app-linear.txt  500-node-from-500-to-1000-app.r  500-node-from-500-to-1000-app.txt
research/5000-node-10000-app/: profiling.txt
research/centralized/: centralized_plot.R  centralized_response_times.data
schema/: app.json  app_dns.json  app_group.json  appmonitor.json  assignment.json  cell.json  common.json  instance.json  lbendpoint.json  reservation.json
schema/websocket/: endpoint.json  trace.json
scripts/: build_binary.sh  build_pex.sh  build_wheel.sh  devel.sh  env_vars.sh  install.s3.sh  install.sh  provision.sh  s6_setup.sh  setup_wheel_cache.sh  sign_rpm.sh  update_s3_rpm_repo.sh  upload_wheel_cache.sh  vagrant_bootstrap.sh  vagrant_master.sh  vagrant_node.sh  zk_setup.sh
tests/: __init__.py  admin_test.py  api_test.py  appcfg_test.py  appcfgmgr_test.py  appenv_test.py  appevents_test.py  appmgr_test.py  apptrace_test.py  blkio.throttle.io_service_bytes.data  blkio.throttle.io_serviced.data  cellconfig_test.py  cellsync_test.py  cgroup_engine_test.py  cgroups_test.py  cgutils_test.py  cleanup_test.py  cli_test.py  context_test.py  cron_test.py  dirwatcher_test.py  discovery_test.py  dnsutils_test.py  endpoints_test.py  eventmgr_test.py  exc_test.py  fs_test.py  fsbackend.py  http_test.py  idirwatcher_test.py  ipset_state.save  iptables_empty_state.save  iptables_filter_drop_state.save  iptables_filter_state.save  iptables_state.save  iptables_test.py  iptables_test_dnat_nat_table.save  iptables_test_nat_table.save  journal_test.py  kafka_test.py  (+48 more)
tests/ad/: __init__.py  gmsa_test.py  servers_test.py
tests/alert/: __init__.py  basic_test.py
tests/api/: allocation_test.py  app_test.py  cell_test.py  cloud_host_test.py  dns_test.py  instance_test.py  ipa_test.py  local_test.py  scheduler_test.py  schema_test.py  server_test.py  state_test.py  tenant_test.py
tests/appcfg/: __init__.py  abort_test.py  configure_test.py  docker_feature_test.py  features_test.py  manifest_test.py  runtime_manifest_test.py
tests/appmgr/: __init__.py  configure_test.py  finish_test.py  manifest_test.py  run_test.py
tests/apptrace/: events_test.py  printer_test.py  zk_test.py
tests/cli/: __init__.py  allocation.py  allocation_test.py  aws_test.py  cloud_test.py  common_test.py  configure.py  configure_test.py  logs.py  logs_test.py  metrics_test.py  run.py  run_test.py  scheduler_test.py  show.py  show_test.py  ssh.py  ssh_test.py
tests/dirwatch/: __init__.py  dirwatch_dispatcher_test.py
tests/infra/: __init__.py  test_configuration.py  test_connection.py  test_infra.py  test_instances.py  test_subnet.py  test_vpc.py
tests/plugins/: zookeeper_test.py
tests/rest/: __init__.py
tests/runtime/: __init__.py
tests/s6/: services_test.py
tests/services/: base_service_test.py  cgroup_service_test.py  localdisk_service_test.py  network_service_test.py  presence_service_test.py
tests/spawn/: cleanup_test.py  instance_test.py  manifest_watch_test.py  tree_test.py  utils_test.py
tests/sproc/: alert_monitor_test.py  api_discover_test.py  apiproxy_test.py  appmonitor_test.py  cellsync_test.py  docker_test.py  export_reports_test.py  metrics_test.py  version_monitor_test.py
tests/supervisor/: s6_test.py
tests/syscall/: unshare_test.py
tests/testutils/: mockzk.py
tests/websocket/: utils_test.py
treadmill/: __init__.py  __main__.py  admin.py  adminctx.py  appcfgmgr.py  appevents.py  apphook.py  authz.py  cgroups.py  cgutils.py  console.py  context.py  discovery.py  diskbenchmark.py  dnsctx.py  dnsutils.py  eventmgr.py  exc.py  firewall.py  fs.py  gssapiprotocol.py  haproxy.py  http.py  idirwatch.py  iptables.py  keytabs.py  ldap3kerberos.py  localdiskutils.py  logcontext.py  lvm.py  master.py  metrics.py  monitor.py  netdev.py  newnet.py  osnoop.py  plugin_manager.py  postmortem.py  presence.py  psmem.py  (+29 more)
treadmill/ad/: __init__.py  _servers.py  gmsa.py
treadmill/api/: __init__.py  allocation.py  api_lookup.py  app.py  app_group.py  app_monitor.py  cell.py  cloud.py  cloud_host.py  cron.py  dns.py  endpoint.py  identity_group.py  instance.py  ipa.py  local.py  nodeinfo.py  server.py  (+4 more)
vagrant/: Vagrantfile
(+1901 files in other folders)
