[metadata]
name=Treadmill
author=Morgan Stanley
author-email=treadmill-oss@morganstanley.com
url=http://treadmill.github.io

[entry_points]
console_scripts =
	treadmill=treadmill.console:run

treadmill.runtime =
	linux=treadmill.runtime.linux:LinuxRuntime
	docker=treadmill.runtime.docker:DockerRuntime

treadmill.cli =
	admin=treadmill.cli.admin
	krb=treadmill.cli.krb
	manage=treadmill.cli.manage
	scheduler=treadmill.cli.scheduler
	supervise=treadmill.cli.supervise
	allocation=treadmill.cli.allocation
	cell=treadmill.cli.cell
	cloud=treadmill.cli.cloud
	configure=treadmill.cli.configure
	cron=treadmill.cli.cron
	discovery=treadmill.cli.discovery
	logs=treadmill.cli.logs
	monitor=treadmill.cli.monitor
	render=treadmill.cli.render
	run=treadmill.cli.run
	server=treadmill.cli.server
	show=treadmill.cli.show
	sproc=treadmill.cli.sproc
	ssh=treadmill.cli.ssh
	stop=treadmill.cli.stop
	trace=treadmill.cli.trace
	trace_identity=treadmill.cli.trace_identity
	build_binary=treadmill.cli.build_binary

treadmill.cli.admin =
	blackout=treadmill.cli.admin.blackout
	checkout=treadmill.cli.admin.checkout
	cloud=treadmill.cli.admin.cloud
	cron=treadmill.cli.admin.cron
	diag=treadmill.cli.admin.diag
	discovery=treadmill.cli.admin.discovery
	http=treadmill.cli.admin.http
	install=treadmill.cli.admin.install
	ldap=treadmill.cli.admin.ldap
	logs=treadmill.cli.admin.logs
	master=treadmill.cli.admin.master
	ok=treadmill.cli.admin.ok
	postmortem=treadmill.cli.admin.postmortem
	scheduler=treadmill.cli.admin.scheduler
	show=treadmill.cli.admin.show
	ssh=treadmill.cli.admin.ssh
	trace=treadmill.cli.admin.trace
	wait=treadmill.cli.admin.wait

treadmill.cli.admin.install =
	haproxy=treadmill.cli.admin.install.haproxy
	master=treadmill.cli.admin.install.master
	node=treadmill.cli.admin.install.node
	openldap=treadmill.cli.admin.install.openldap
	spawn=treadmill.cli.admin.install.spawn
	zookeeper=treadmill.cli.admin.install.zookeeper

treadmill.cli.admin.checkout =
	api=treadmill.cli.admin.checkout.api
	capacity=treadmill.cli.admin.checkout.capacity
	ldap=treadmill.cli.admin.checkout.ldap
	servers=treadmill.cli.admin.checkout.servers
	sysapps=treadmill.cli.admin.checkout.sysapps
	zk=treadmill.cli.admin.checkout.zk

treadmill.cli.admin.scheduler =
	allocs=treadmill.cli.admin.scheduler.allocs
	apps=treadmill.cli.admin.scheduler.apps
	servers=treadmill.cli.admin.scheduler.servers

treadmill.cli.admin.supervise =
	multi_cell_monitor=treadmill.cli.admin.supervise.multi_cell_monitor
	reaper=treadmill.cli.admin.supervise.reaper

treadmill.api =
	model=treadmill.api.model
	allocation=treadmill.api.allocation
	api-lookup=treadmill.api.api_lookup
	app=treadmill.api.app
	app-group=treadmill.api.app_group
	app-monitor=treadmill.api.app_monitor
	cell=treadmill.api.cell
	cloud=treadmill.api.cloud
	cron=treadmill.api.cron
	dns=treadmill.api.dns
	endpoint=treadmill.api.endpoint
	identity-group=treadmill.api.identity_group
	instance=treadmill.api.instance
	ipa=treadmill.api.ipa
	local=treadmill.api.local
	nodeinfo=treadmill.api.nodeinfo
	scheduler=treadmill.api.scheduler
	server=treadmill.api.server
	state=treadmill.api.state
	tenant=treadmill.api.tenant
	trace=treadmill.api.trace

treadmill.rest =
	api=treadmill.rest.api
	auth=treadmill.rest.auth
	error_handlers=treadmill.rest.error_handlers

treadmill.rest.api =
	allocation=treadmill.rest.api.allocation
	api-lookup=treadmill.rest.api.api_lookup
	app=treadmill.rest.api.app
	app-group=treadmill.rest.api.app_group
	app-monitor=treadmill.rest.api.app_monitor
	cell=treadmill.rest.api.cell
	cloud=treadmill.rest.api.cloud
	cron=treadmill.rest.api.cron
	dns=treadmill.rest.api.dns
	endpoint=treadmill.rest.api.endpoint
	identity_group=treadmill.rest.api.identity_group
	instance=treadmill.rest.api.instance
	ipa=treadmill.rest.api.ipa
	local=treadmill.rest.api.local
	nodeinfo=treadmill.rest.api.nodeinfo
	scheduler=treadmill.rest.api.scheduler
	server=treadmill.rest.api.server
	state=treadmill.rest.api.state
	tenant=treadmill.rest.api.tenant
	trace=treadmill.rest.api.trace

treadmill.rest.auth =
	trusted=treadmill.rest.auth.trusted

treadmill.ad =
	_servers=treadmill.ad._servers
	gmsa=treadmill.gmsa

treadmill.appcfg =
	abort=treadmill.appcfg.abort
	configure=treadmill.appcfg.configure
	manifest=treadmill.appcfg.manifest

treadmill.appenv =
	appenv=treadmill.appenv.appenv
	linux_appenv=treadmill.appenv.linux_appenv

treadmill.apptrace =
	events=treadmill.apptrace.events
	printer=treadmill.apptrace.printer
	zk=treadmill.apptrace.zk

treadmill.bootstrap =
	haproxy=treadmill.bootstrap.haproxy
	spawn=treadmill.bootstrap.spawn
	aliases=treadmill.bootstrap.aliases
	vagrant_aliases=treadmill.bootstrap.vagrant_aliases
	openldap=treadmill.bootstrap.openldap
	openldap.vagrant=treadmill.bootstrap.openldap.vagrant
	zookeeper=treadmill.bootstrap.zookeeper
	zookeeper.vagrant=treadmill.bootstrap.zookeeper.vagrant
	master=treadmill.bootstrap.master
    master.vagrant=treadmill.bootstrap.master.vagrant
	node=treadmill.bootstrap.node
	node.vagrant=treadmill.bootstrap.node.vagrant

treadmill.bootstrap.haproxy =
	linux=treadmill.bootstrap.haproxy.linux

treadmill.bootstrap.master =
	linux=treadmill.bootstrap.master.linux
	vagrant.linux=treadmill.bootstrap.vagrant.linux
	vagrant=treadmill.bootstrap.vagrant

treadmill.bootstrap.node =
	linux=treadmill.bootstrap.node.linux
	vagrant.linux=treadmill.bootstrap.node.vagrant.linux
	windows=treadmill.bootstrap.node.windows
	vagrant=treadmill.bootstrap.node.vagrant

treadmill.bootstrap.openldap =
	linux=treadmill.bootstrap.openldap.linux
	vagrant.linux=treadmill.bootstrap.openldap.vagrant.linux
	vagrant=treadmill.bootstrap.openldap.vagrant

treadmill.bootstrap.spawn =
	linux=treadmill.bootstrap.spawn.linux

treadmill.bootstrap.zookeeper =
	linux=treadmill.bootstrap.zookeeper.linux
	vagrant.linux=treadmill.bootstrap.zookeeper.vagrant.linux
	vagrant=treadmill.bootstrap.zookeeper.vagrant

treadmill.checkout =
	api=treadmill.checkout.api
	capacity=treadmill.checkout.capacity
	ldap=treadmill.checkout.ldap
	sysapps=treadmill.checkout.sysapps
	zk=treadmill.checkout.zk

treadmill.cron =
	model=treadmill.cron.model
	run=treadmill.cron.run
	app=treadmill.cron.app
	monitor=treadmill.cron.monitor

treadmill.cron.model =
	app=treadmill.cron.model.app
	monitor=treadmill.cron.model.monitor

treadmill.cron.run =
	app=treadmill.cron.run.app
	monitor=treadmill.cron.run.monitor

treadmill.dirwatch =
	dirwatch_base=treadmill.dirwatch.dirwatch_base
	dirwatch_dispatcher=treadmill.dirwatch.dirwatch_dispatcher
	linux_dirwatch=treadmill.dirwatch.linux_dirwatch
	windows_dirwatch=treadmill.dirwatch.windows_dirwatch

treadmill.formatter =
	jsonfmt=treadmill.formatter.jsonfmt
	tablefmt=treadmill.formatter.tablefmt
	yamlfmt=treadmill.formatter.yamlfmt

treadmill.infra =
	setup=treadmill.infra.setup
	utils=treadmill.infra.utils
	configuration=treadmill.infra.configuration
	connection=treadmill.infra.connection
	constants=treadmill.infra.constants
	ec2object=treadmill.infra.ec2object
	instances=treadmill.infra.instances
	subnet=treadmill.infra.subnet
	vpc=treadmill.infra.vpc

treadmill.infra.setup =
	base_provision=treadmill.infra.setup.base_provision
	cell=treadmill.infra.setup.cell
	ipa=treadmill.infra.setup.ipa
	ldap=treadmill.infra.setup.ldap
	node=treadmill.infra.setup.node
	zookeeeper=treadmill.infra.setup.zookeeper

treadmill.infra.utils =
	cli_callbacks=treadmill.infra.utils.cli_callbacks
	hosted_zones=treadmill.infra.utils.hosted_zones
	mutually_exclusive_option=treadmill.infra.utils.mutually_exclusive_option
	security_group=treadmill.infra.utils.security_group

treadmill.metrics =
	cgroup_api=treadmill.metrics.cgroup_api
	engine=treadmill.metrics.engine
	rrd=treadmill.metrics.rrd

treadmill.plugins =
	api=treadmill.plugins.api
	sproc=treadmill.plugins.sproc
	zookeeper=treadmill.plugins.zookeeper

treadmill.plugins.api =
	instance=treadmill.plugins.api.instance

treadmill.plugins.sproc =
	servers=treadmill.plugins.sproc.servers

treadmill.plugins.ref =
	api=treadmill.plugins.ref.api
	fs=treadmill.plugins.ref.fs
	rest=treadmill.plugins.ref.rest
	sproc=treadmill.plugins.ref.sproc
	context=treadmill.plugins.ref.context
	zookeeper=treadmill.plugins.ref.zookeeper

treadmill.plugins.ref.api =
	authz=treadmill.plugins.ref.api.authz
	instance=treadmill.plugins.ref.api.instance

treadmill.plugins.ref.fs =
	localfs=treadmill.plugins.ref.fs.localfs
	nfs=treadmill.plugins.ref.fs.nfs

treadmill.plugins.ref.rest =
	api=treadmill.plugins.ref.rest.api
	auth=treadmill.plugins.ref.rest.auth
	error_handlers=treadmill.plugins.ref.rest.error_handleres

treadmill.plugins.ref.rest.auth =
	myauth=treadmill.plugins.ref.rest.myauth

treadmill.plugins.ref.rest.sproc =
	servers=treadmill.plugins.ref.rest.sproc.servers

treadmill.services =
	_base_service=treadmill.services._base_service
	cgroup_service=treadmill.services.cgroup_service
	localdisk_service=treadmill.services.localdisk_service
	network_service=treadmill.services.network_service

treadmill.sproc =
	checkout=treadmill.sproc.checkout
	ad=treadmill.sproc.ad
	appcfgmgr=treadmill.sproc.appcfgmgr
	appevents=treadmill.sproc.appevents
	appmonitor=treadmill.sproc.appmonitor
	cellsync=treadmill.sproc.cellsync
	cgroup=treadmill.sproc.cgroup
	cgroup-server=treadmill.sproc.cgroup_server
	cleanup=treadmill.sproc.cleanup
	configure=treadmill.sproc.configure
	cron=treadmill.sproc.cron
	eventdaemon=treadmill.sproc.eventdaemon
	exec=treadmill.sproc.exec
	export-reports=treadmill.sproc.export_reports
	finish=treadmill.sproc.finish
	firewall=treadmill.sproc.firewall
	haproxy=treadmill.sproc.haproxy
	host-aliases=treadmill.sproc.host_aliases
	host-ring=treadmill.sproc.host_ring
	init=treadmill.sproc.init
	kafka=treadmill.sproc.kafka
	keytabs=treadmill.sproc.keytabs
	metrics=treadmill.sproc.metrics
	monitor=treadmill.sproc.monitor
	nodeinfo=treadmill.sproc.nodeinfo
	presence=treadmill.sproc.presence
	tickets=treadmill.sproc.tickets
	trace=treadmill.sproc.trace
	version-monitor=treadmill.sproc.monitor
	vring=treadmill.sproc.vring
	websocket=treadmill.sproc.websocket
	zk2fs=treadmill.sproc.zk2fs
	scheduler=treadmill.sproc.scheduler
    restapi=treadmill.sproc.restapi
    service=treadmill.sproc.service
    reboot-monitor=treadmill.sproc.reboot_monitor

treadmill.spawn =
	cleanup=treadmill.spawn.cleanup
	instance=treadmill.spawn.instance
	manifest_watch=treadmill.spawn.manifest_watch
	tree=treadmill.spawn.tree
	utils=treadmill.spawn.utils

treadmill.supervisor =
	s6=treadmill.supervisor.s6
	winss=treadmill.supervisor.winss
	_scan_dir_base=treadmill.supervisor._scan_dir_base
	_utils=treadmill.supervisor._utils

treadmill.supervisor.s6 =
	scan_dir=treadmill.supervisor.s6.scan_dir
	services=treadmill.supervisor.s6.services

treadmill.supervisor.winss =
	scan_dir=treadmill.supervisor.winss.scan_dir
	services=treadmill.supervisor.winss.services

treadmill.syscall =
	_sigsetops=treadmill.syscall._sigsetops
	eventfd=treadmill.syscall.eventfd
	inotify=treadmill.syscall.inotify
	mount=treadmill.syscall.mount
	signalfd=treadmill.syscall.signalfd
	sigprocmask=treadmill.syscall.sigprocmask
	sysinfo=treadmill.syscall.sysinfo
	unshare=treadmill.syscall.unshare
	winsymlink=treadmill.syscall.winsymlink

treadmill.websocket =
	api=treadmill.websocket.api
	_utils=treadmill.websocket._utils
	client=treadmill.websocket.client

treadmill.websocket.api =
	endpoint=treadmill.websocket.api.endpoint
	identity_group=treadmill.websocket.api.identity_group
	state=treadmill.websocket.api.state
	trace=treadmill.websocket.api.trace

treadmill.zksync =
	utils=treadmill.zksync.utils
	zk2fs=treadmill.zksync.zk2fs

treadmill.context =
	admin=treadmill.adminctx
	dns=treadmill.dnsctx
	zookeeper=treadmill.zkctx

[flake8]
exclude=.svn,CVS,.bzr,.hg,.git,__pycache__,build,dist,scripts,docs,*.egg,.tox
ignore=E731,E241,
