[metadata]
name = Treadmill
version = 1.0
url = 'http://treadmill.github.io',
long_description = file: README.md
classifiers =
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: Implementation :: CPython


[options]
# zip_safe = True  XXX: treadmill.infra is not zip safe
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =lib/python
setup_requires =
    pytest-runner
tests_require =
    pytest
entry_points = file: lib/python/treadmill.egg-info/entry_points.txt

[options.packages.find]
where = lib/python

###############################################################################
[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source


###############################################################################
[pep8]
show_source = True
show_pep8 = True
count = True
# E402: Import not at top of file
ignore=E402


###############################################################################
[alias]
test=pytest

[tools:pytest]
addopts = --verbose
norecursedirs = .git docs bin sbin tools build_utils

[converage:run]
source=treadmill
branch = True
concurency =
    thread
    multiprocessing
    gevent

[converage:report]
omit = /ms/dist/*
