[metadata]
name = Treadmill
url = 'http://treadmill/',
long_description = file: README.md
classifiers =
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: Implementation :: CPython


[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =lib/python
entry_points = file: lib/python/Treadmill.egg-info/entry_points.txt

[options.packages.find]
where = lib/python

###############################################################################
[easy_install]
allow_hosts =
